--- a/personal-site/css/projects.css
+++ b/personal-site/css/projects.css
@@ -24,13 +24,13 @@
     background-color: #f37373;
     padding: 3%;
     margin-right: 5%;
-    /* position: relative; */
+    position: relative;
     /* z-index: 1; */
   }
   
   .btn::after {
     content: "";
-    /* position: absolute; */
+    position: absolute;
     left: 0;
     width: 100%;
     height: 100%;
@@ -69,7 +69,7 @@
 
   #dropdown-container {
     display: none;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
     /* margin-top: -10px; */
     padding-top: 10px;
     padding-bottom: 50px;
@@ -78,7 +78,7 @@
   
   #sub-dropdown-container {
     display: none;
-    background-color: #785740;
+    /* background-color: #785740; */
     padding-bottom: 50px;
   }
 
